--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "classnames": "^2.5.1",
+    "date-fns": "^4.1.0",
+    "flowbite-react": "^0.12.9",
+    "moment-timezone": "^0.6.0",
+    "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.4"
+    "react-day-picker": "^9.11.0",
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
