--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "15.5.4",
     "react": "19.1.0",
     "react-day-picker": "^9.11.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
