--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react": "19.1.0",
     "react-day-picker": "^9.11.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
+    "sweetalert2": "^11.23.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
