--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
     "sweetalert2": "^11.23.0",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
