--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
     "flowbite-react": "^0.12.9",
+    "jsbarcode": "^3.12.1",
+    "jspdf": "^3.0.3",
     "moment-timezone": "^0.6.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-day-picker": "^9.11.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
+    "react-window": "^2.2.0",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.23.0",
     "uuid": "^13.0.0",
     "xlsx": "^0.18.5"
