--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
     "react-window": "^2.2.0",
+    "recharts": "^3.2.1",
     "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.23.0",
     "uuid": "^13.0.0",
