--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "flowbite-react": "^0.12.9",
     "jsbarcode": "^3.12.1",
     "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "moment-timezone": "^0.6.0",
     "next": "15.5.4",
     "react": "19.1.0",
