--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@heroicons/react": "^2.2.0",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
+    "exceljs": "^4.4.0",
     "flowbite-react": "^0.12.9",
     "jsbarcode": "^3.12.1",
     "jspdf": "^3.0.3",
