--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jspdf-autotable": "^5.0.2",
     "moment-timezone": "^0.6.0",
     "next": "^16.0.10",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-day-picker": "^9.11.0",
     "react-dom": "19.1.0",
